2003-02-23  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h:
          Replaced NodeVisitor with NodeTraverser.  NodeTraverser is a
          convenience class that performs a traversal that avoids
          redundantly traversing nodes.  Unlike NodeVisitor, a traversal
          may be made with a NodeTraverser in the middle of another
          traversal.

2003-02-23  Thomas Flynn  <tflynn@users.sourceforge.net>

        * src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/ScriptJDK.cpp: Add support for
          Browser.getCurrentSpeed.

        * src/openvrml/OpenVRML/ScriptJDK.cpp: Add additional comments.
          Make use of addElement method.

2003-02-17  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp:  Fixed bug in
          Browser::findNode.
          

2003-02-15  Braden McDaniel  <braden@endoframe.com>

        * src/lookat/lookat.cpp, src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:  Added abstract
          node classes TransformNode and ViewpointNode.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:  Removed
          debug output.

2003-02-14  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp:  Restored necessary
          clearing of bound node stacks in Browser::loadURI.

2003-02-13  Braden McDaniel  <braden@endoframe.com>
