@@ -1,3 +1,8 @@
+2003-02-24  Braden McDaniel  <braden@endoframe.com>
+
+        * src/openvrml/OpenVRML/browser.cpp:  Added do_shutdown
+          implementation to ProtoNode.
+
 2003-02-23  Braden McDaniel  <braden@endoframe.com>
 
         * src/openvrml/OpenVRML/browser.cpp,
